# luda

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  noxfile.py  pyproject.toml
.github/workflows/: linters.yml  nox.yml  tests.yml
app/: __init__.py  db.py  helpers.py  main.py
app/db/: __init__.py  core.py  metrics.py  missions.py
app/lib/: __init__.py  constants.py
app/lib/data/: __init__.py  catalogue.py
app/lib/data/models/: __init__.py  core.py
app/routers/: missions.py
data/: datasets.json
luda/: constants.py  data.py  dataset.py
luda/data/: catalogue.py
scripts/: seed.py
tests/: __init__.py  conftest.py  test_luda.py  test_main.py
