[tool.poetry]
name = "app"
version = "0.0.1"
description = ""
authors = ["ellsphillips <elliott.phillips@levellingup.gov.uk>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.109.2"
gunicorn = "^21.2.0"
uvicorn = "^0.27.1"

[tool.poetry.dev-dependencies]
pytest = "7.2.0"
pytest-cov = "^3.0.0"
mypy = "^1.7.1"
coverage = "6.3.2"
isort = "^5.12.0"
pre-commit = "^2.20.0"
black = {version = "^22.6.0", allow-prereleases = true}
flake8 = "^5.0.4"
pylint = "2.13.0"

[tool.pytest.ini_options]
addopts = "--cov=luda"
testpaths = ["tests/luda"]
filterwarnings = "ignore::pytest.PytestDeprecationWarning"


[tool.mypy]
mypy_path = "luda"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true


[tool.setuptools.package-data]
luda = ["py.typed"]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
profile = "black"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
